--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -25,8 +25,6 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-/dev/color_enhancement    0660   system     system
-
 # the DIAG device node is not world writable/readable.
 /dev/diag                 0660   system     qcom_diag
 
@@ -36,7 +34,7 @@
 /dev/kgsl-2d0             0666   root       root
 /dev/kgsl-2d1             0666   root       root
 /dev/ion                  0664   system     system
-/dev/rtc0                 0600   system     system
+/dev/rtc0                 0660   system     system
 /dev/smd0                 0660   system     system
 /dev/smd4                 0660   system     system
 /dev/smd_cxm_qmi          0640   radio      radio
@@ -44,10 +42,16 @@
 /dev/smd6                 0660   system     system
 /dev/smd7                 0660   bluetooth  bluetooth
 /dev/ccid_bridge          0660   system     system
+/dev/ipa                  0660   system     net_admin
+/dev/wwan_ioctl           0660   system     net_admin
+/dev/ipaNatTable          0660   net_admin  net_admin
+/dev/rmnet_ctrl           0660   usb        usb
+/dev/dpl_ctrl             0660   usb        usb
 
 #permissions for CSVT
 /dev/smd11                0660   radio      radio
 
+/dev/radio0               0640   system     system
 /dev/rfcomm0              0660   bluetooth  bluetooth
 /dev/ttyUSB0              0660   bluetooth  bluetooth
 /dev/smdcntl0             0640   radio      radio
@@ -58,6 +62,7 @@
 /dev/smdcntl5             0640   radio      radio
 /dev/smdcntl6             0640   radio      radio
 /dev/smdcntl7             0640   radio      radio
+/dev/smdcntl8             0640   radio      radio
 /dev/smdcnt_rev0          0640   radio      radio
 /dev/smdcnt_rev1          0640   radio      radio
 /dev/smdcnt_rev2          0640   radio      radio
@@ -102,11 +107,15 @@
 /dev/media*               0660   system     camera
 /dev/v4l-subdev*          0660   system     camera
 /dev/qseecom              0660   system     drmrpc
+/dev/seemplog             0660   system     system
+/dev/pft                  0660   system     drmrpc
 /dev/gemini0              0660   system     camera
 /dev/jpeg0                0660   system     camera
 /dev/jpeg1                0660   system     camera
 /dev/jpeg2                0660   system     camera
+/dev/jpeg3                0660   system     camera
 /dev/adsprpc-smd          0664   system     system
+/dev/system_health_monitor 0640  radio      system
 /dev/mmc3416x             0660   system     system
 /dev/msm_camera/*         0660   system     camera
 /dev/gemini/              0660   system     camera
@@ -117,7 +126,6 @@
 /dev/msm_vidc_enc         0660   system     audio
 /dev/msm_rotator          0660   system     system
 /dev/hw_random            0600   root       root
-/dev/adsprpc-smd          0664   system     system
 
 #permissions for audio
 /dev/audio_slimslave      0660   system     audio
@@ -125,6 +133,8 @@
 /dev/msm_evrc             0660   system     audio
 /dev/msm_wma              0660   system     audio
 /dev/msm_wmapro           0660   system     audio
+/dev/msm_alac             0660   system     audio
+/dev/msm_ape              0660   system     audio
 /dev/msm_amrnb            0660   system     audio
 /dev/msm_amrwb            0660   system     audio
 /dev/msm_amrwbplus        0660   system     audio
@@ -138,6 +148,7 @@
 /dev/msm_ac3              0660   system     audio
 /dev/msm_audio_cal        0660   system     audio
 /dev/msm_acdb             0660   system     audio
+/dev/msm_hweffects        0660   system     audio
 /dev/msm_cad              0660   system     audio
 /dev/msm_fm               0660   system     audio
 /dev/msm_mvs              0660   system     audio
@@ -145,7 +156,6 @@
 /dev/msm_preproc_ctl      0660   system     audio
 /dev/msm_rtac             0660   system     audio
 /dev/msm_voicememo        0660   system     audio
-/dev/radio0               0644   system     audio
 /dev/smd3                 0660   bluetooth  net_bt_stack
 /dev/smd2                 0660   bluetooth  net_bt_stack
 /dev/ttyHSL1              0660   system     system
@@ -169,32 +179,27 @@
 /dev/tsc_ci0              0660   media       media
 
 # sensors
-/dev/yl_alsprox_sensor                                             0660    system   system
-/dev/yl_params1                                                    0660    system   system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            enable         0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            poll_delay     0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            enable_wakeup  0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            max_latency    0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            flush          0660    input    system
-/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            calibrate      0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            accel_enable   0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            accel_delay    0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            calibration    0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            debug          0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            device_delay   0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            enable_als_sensor 0660 input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            enable_ps_sensor  0660 input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            gyro_enable    0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            gyro_delay     0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            ps_calibration 0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            reg            0660    input    system
+/sys/devices/i2c-12/12-*  pollrate_ms 0664 system system
+/sys/devices/f9925000.i2c/i2c-0/0-*                 enable         0660    input    system
+/sys/devices/f9925000.i2c/i2c-0/0-*                 poll_delay     0660    input    system
 /sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            enable         0660    input    system
 /sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            poll_delay     0660    input    system
 /sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            enable_wakeup  0660    input    system
 /sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            max_latency    0660    input    system
 /sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            flush          0660    input    system
 /sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            calibrate      0660    input    system
-/sys/devices/soc.0/78b6000.i2c/i2c-0/0-*            chip_id        0660    input    system
+/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            enable         0660    input    system
+/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            poll_delay     0660    input    system
+/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            enable_wakeup  0660    input    system
+/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            max_latency    0660    input    system
+/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            flush          0660    input    system
+/sys/devices/soc.0/78b5000.i2c/i2c-1/1-*            calibrate      0660    input    system
+/sys/devices/virtual/optical_sensors/proximity      ps_adc         0660    input    system
+/sys/devices/virtual/optical_sensors/proximity      ps_poll_delay  0660    input    system
+/sys/devices/virtual/optical_sensors/lightsensor    ls_auto        0660    input    system
+/sys/devices/virtual/optical_sensors/lightsensor    ls_poll_delay  0660    input    system
+/sys/devices/virtual/input/input*                   poll           0660    input    system
+/sys/devices/virtual/input/input*                   pollrate_ms    0660    input    system
 
 # vm_bms
 /dev/vm_bms               0660   system     system
@@ -203,6 +208,8 @@
 # wlan
 /dev/wcnss_wlan           0660   system     system
 /dev/wcnss_ctrl           0660   system     system
+/sys/devices/soc.0/a000000.qcom,wcnss-wlan/net/wlan0/queues/rx-* rps_cpus           0660   system     system
+/sys/devices/soc.0/a000000.qcom,wcnss-wlan/net/p2p0/queues/rx-* rps_cpus            0660   system     system
 
 #nfc permissions
 /dev/nfc-nci              0660    nfc         nfc
@@ -213,8 +220,8 @@
 /dev/uio1                 0660   system     system
 /dev/uio2                 0660   system     system
 
-# ESOC devices
-/dev/subsys_esoc*         0640   system     radio
+# SSR devices
+/dev/subsys_*             0640   system     system
 
 #BST
 /sys/devices/virtual/input/input* range                       0660    input      system
@@ -272,5 +279,5 @@
 /sys/devices/virtual/input/input* rept_z                      0660    input      system
 /sys/devices/virtual/input/input* test                        0660    input      system
 
-/dev/block/bootdevice/by-name/frp                             0600    system     system
-/dev/block/bootdevice/by-name/config                          0600    system     system
+/dev/block/platform/soc.0/7824900.sdhci/by-name/frp                             0660    system     system
+/dev/block/platform/soc.0/7824900.sdhci/by-name/config                          0660    system     system
